<resources>
    <string name="app_name">hundredthieves</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hundredthieves">100 Thieves</string>
    <string name="descriptionLogo">100 Thieves Logo</string>
    <string name="empty_fragment">Empty Fragment</string>
    <string name="menuHome">Home</string>
    <string name="menuSchedule">Schedule</string>
    <string name="menuTeam">Team</string>
    <string name="menuMedia">Media</string>
    <string name="menuAbout">About</string>
    <string name="menuContact">Contact</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="title_activity_roster">Roster</string>
    <string name="menuStore">Store</string>
    <string name="title_activity_schedule_list">ScheduleList</string>
    <string name="matchHome">100 Thieves VS</string>
    <string name="matchOpponent">Opponent</string>
    <string name="matchDate">Date</string>
    <string name="title_activity_team_schedule_list">TeamScheduleList</string>
    <string name="title_activity_roster_list">RosterList</string>
    <string name="title_activity_player_detail">PlayerDetail</string>
    <string name="playerName">Player Name</string>
    <string name="bio">Player Bio</string>
    <string name="role">Player Role</string>
    <string name="title_activity_social_links">SocialLinks</string>
</resources>
