<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menuHome" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_menu_schedule"
            android:title="@string/menuSchedule" />
        <item
            android:id="@+id/nav_team"
            android:icon="@drawable/ic_menu_team"
            android:title="@string/menuTeam" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/menuAbout" />
        <item
            android:id="@+id/nav_store"
            android:icon="@drawable/ic_menu_store"
            android:title="@string/menuStore" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_menu_contact"
            android:title="@string/menuContact" />
    </group>

</menu>
