<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="9"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/matchHome"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical|start"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/matchHome"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/matchOpponent"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical|start"
            android:textAllCaps="true"
            android:text="@string/matchOpponent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/matchDate"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical|start"
            android:textAllCaps="true"
            android:textStyle="italic"
            android:text="@string/matchDate"
            />

    </LinearLayout>

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center_vertical|end"
        android:layout_marginEnd="16dp"
        android:id="@+id/matchOutcome"
        android:contentDescription="@null" />

</android.support.v7.widget.CardView>